--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Second section
         </div>
         <div>
         <footer class="form-style-10">
-          <p>Δημιουργήθηκε από τον: <a target="_blank" href="http://cse.uoi.gr/~cse74134">Παύλο Ορφανίδη</a></p>
+          <p>Δημιουργήθηκε από τον: <a target="_blank" href="http://orfanidis.xyz">Παύλο Ορφανίδη</a></p>
           <p>Πληροφορίες Επικοινωνίας: <a href="mailto:webmaster@orfanidis.xyz">webmaster@orfanidis.xyz</a>.</p>
         </footer>
       </div>
