Added comment to specify the way the mark in java is being calculated

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         .form-style-10 input[type="submit"]{
         	background: #2A88AD;
         	padding: 8px 20px 8px 20px;
-        	border-radius: 5px;
+        	border-radius: 5px;java_mark
         	-webkit-border-radius: 5px;
         	-moz-border-radius: 5px;
         	color: #fff;
@@ -196,6 +196,7 @@
                     {
                       alert(message);
                     }
+                    //(20%*εργαστήριο) + (30%*(Μέσος όρος εργασιών)) + 50%*(τελική εξέταση)
                     var result=20/100*grades[0]+30/100*(grades[1]+grades[2])/2+50/100*grades[3];
 
                     if(grades[3]<minimumGrade)
@@ -309,6 +310,7 @@ Second section
         {
           alert(message);
         }
+        //2*(5-(20%*εργαστήριο) + (30%*(Μέσος όρος εργασιών)))
         var result=2*(5-(20/100*grades[0]+30/100*(grades[1]+grades[2])/2));
 
         if(result<minimumGrade)
@@ -360,8 +362,8 @@ Second section
         </div>
         <div>
         <footer class="form-style-10">
-          <p>Δημιουργήθηκε από τον: <a target="_blank" href="http://orfanidis.xyz">Παύλο Ορφανίδη</a></p>
-          <p>Πληροφορίες Επικοινωνίας: <a href="mailto:webmaster@orfanidis.xyz">webmaster@orfanidis.xyz</a>.</p>
+          <p>Δημιουργήθηκε από τον: <a target="_blank" href="http://pavlos.orfanidis.net.gr">Παύλο Ορφανίδη</a></p>
+          <p>Πληροφορίες Επικοινωνίας: <a href="mailto:pavlos@orfanidis.net.gr">pavlos@orfanidis.net.gr</a>.</p>
         </footer>
       </div>
       </body>
