Added github url to credits

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Second section
         </div>
         <div>
         <footer class="form-style-10">
-          <p>Δημιουργήθηκε από τον: <a target="_blank" href="http://pavlos.orfanidis.net.gr">Παύλο Ορφανίδη</a></p>
+          <p>Δημιουργήθηκε από τον: <a target="_blank" href="https://github.com/porfanid">Παύλο Ορφανίδη</a></p>
           <p>Πληροφορίες Επικοινωνίας: <a href="mailto:pavlos@orfanidis.net.gr">pavlos@orfanidis.net.gr</a>.</p>
         </footer>
       </div>
