Added metatags and google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,63 @@
     <meta charset="utf-8">
     <title>Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού</title>
 
+    <!--
+      Google analytics tag
+    -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-53SB7GJ8DH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-53SB7GJ8DH');
+    </script>
+
+
+
+    <meta name="description" content="Website to calculate the grade for the course 'Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού' at the University of Ioannina.">
+    <meta name="keywords" content="Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού, University of Ioannina, Programming, Object-Oriented Programming">
+    <meta name="author" content="Παύλος Ορφανίδης">
+    <meta name="robots" content="index, follow">
+    <meta name="rating" content="general">
+    <meta name="language" content="en">
+    <meta name="revisit-after" content="7 days">
+
+    <!-- Additional meta tags -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Sets the rendering mode for IE browsers -->
+
+    <meta name="format-detection" content="telephone=no">
+    <!-- Prevents automatic detection of phone numbers in the content for mobile devices -->
+
+    <meta name="referrer" content="origin">
+    <!-- Controls the value sent in the Referer header when navigating to other pages -->
+
+    <meta name="theme-color" content="#ff0000">
+    <!-- Specifies the theme color for the browser's address bar and taskbar in supported devices -->
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Enables standalone (full-screen) mode on iOS devices when the website is added to the home screen -->
+
+    <meta name="apple-mobile-web-app-title" content="Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού">
+    <!-- Specifies the title that should be displayed if the website is added to the home screen on iOS devices -->
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="red">
+    <!-- Sets the style for the status bar on iOS devices when the website is added to the home screen -->
+
+    <meta name="msapplication-TileColor" content="#ff0000">
+    <!-- Specifies the tile color for Windows 8/10 Start screen pinning -->
+
+    <!-- Open Graph meta tags for social media sharing (replace with actual values) -->
+    <meta property="og:title" content="Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού">
+    <meta property="og:description" content="Website to calculate the grade for the course 'Τεχνικές Αντικειμενοστρεφούς Προγραμματισμού' at the University of Ioannina.">
+    <meta property="og:url" content="https://java.mark.orfanidis.net.gr">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+
+
+
+    <!--Css style-->
     <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
